# Aoi

./: .env.example  .gitignore  README.ja.md  README.md  docker-compose.yml  install_extensions.sh  pyproject.toml
.serena/: project.yml
agent-ui/src/app/: layout.tsx
agent-ui/src/components/playground/Sidebar/: Sidebar.tsx
browser-extension/: manifest.json
services/core-agent/: .encryption_key  integration_settings.json  integration_test_results.json  main.py  requirements.txt  simple_server.py  sync_rules.json  test_cross_platform_integration.py  test_deepl_integration.py  test_integration_system.py  test_memory_sync.py  test_server.py
services/core-agent/aoi/continuity/: task_continuation_system.py
services/core-agent/aoi/design/: AOI_UNIVERSAL_AGENT_PLAN.md
services/core-agent/aoi/evidence/: evidence_system.py
services/core-agent/aoi/integration/: __init__.py  cross_platform_system.py  event_system.py  integration_config.py  memory_sync.py  platform_adapter.py  platform_adapters.py
services/core-agent/aoi/nlp/: contextual_understanding.py  natural_language_processor.py
services/core-agent/aoi/personality/: personality_system.py
services/core-agent/src/aoi/: __init__.py
services/core-agent/src/aoi/api/: server.py
services/core-agent/src/aoi/core/: agent.py  config.py  response_generator.py
services/core-agent/src/aoi/mcp/: __init__.py  client.py  integration.py  servers.py
services/core-agent/test_config/: .encryption_key  integration_settings.json  sync_rules.json
services/core-agent/test_config.json/: integration_settings.json
(+4 files in other folders)
