[tool.serena]
project_name = "Aoi AI Agent"
project_type = "python"
root_directory = "/Users/39pon/dev/trae/Aoi"
main_service = "services/core-agent"
frontend = "agent-ui"
language = "python"
framework = "fastapi"
ui_framework = "nextjs"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoi-agent"
version = "0.1.0"
description = "Universal AI Agent Ecosystem"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]